--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/carson-loser/Social-Network_API/issues"
   },
-  "homepage": "https://github.com/carson-loser/Social-Network_API#readme"
+  "homepage": "https://github.com/carson-loser/Social-Network_API#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^6.9.0"
+  }
 }
